--- a/content/themes/elements/sass/layout/_settings.scss
+++ b/content/themes/elements/sass/layout/_settings.scss
@@ -39,7 +39,6 @@ $column-gutter: rem-calc(30);
 
 $block-grid-elements: 4;
 $block-grid-default-spacing: rem-calc(30);
-$align-block-grid-to-grid: true;
 
 // Initialize foundation classes
 $include-html-classes: true;
